se corrige el archivo cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
-name = "Reticual1"
+name = "tu_proyecto_ggh"
 version = "0.1.0"
-edition = "2021"
+edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
+# Dependencias
 [dependencies]
+nalgebra = "0.29"
+num-bigint = "0.4"
+rand = "0.8"
